--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -11,8 +11,8 @@
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-      <li><a href="{{ site.baseurl }}/list.html">List</a></li>
-      <li><a href="{{ site.baseurl }}/links.html">Links</a></li>
+      <li><a href="{{ site.baseurl }}/article.html">文章</a></li>
+      <li><a href="{{ site.baseurl }}/links.html">趣物</a></li>
       <li><a href="{{ site.baseurl }}/projects.html">Projects</a></li>
       <li><a href="{{ site.baseurl }}/about.html">About</a></li>
       </ul>
