--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -25,15 +25,15 @@
   <ul class="sidebar-nav">
     <li class="sidebar-brand"><a href="{{ site.baseurl }}/"><h1 class="brand">{{ site.name }}</h1></a><h3>{{ site.description }}</h3></li>
     <hr />
-    <li><a href="{{ site.baseurl }}/list.html">List</a></li>
-    <li><a href="{{ site.baseurl }}/links.html">Links</a></li>
+    <li><a href="{{ site.baseurl }}/list.html">文章</a></li>
+    <li><a href="{{ site.baseurl }}/links.html">趣物</a></li>
     <li><a href="{{ site.baseurl }}/projects.html">Projects</a></li>
     <li><a href="{{ site.baseurl }}/about.html">About</a></li>
     <hr />
     <div id="social-wrapper">
-      <li> <a href="{{ site.twitter }}"><i class="fa fa-twitter-square"></i> @twitter</a></li>
+<!--       <li> <a href="{{ site.twitter }}"><i class="fa fa-twitter-square"></i> @twitter</a></li>
       <li> <a href="{{ site.linkedin }}"><i class="fa fa-linkedin-square"></i> linkedin</a> </li>
-      <li> <a href="{{ site.facebook }}"><i class="fa fa-facebook-square"></i> facebook</a></li>
+      <li> <a href="{{ site.facebook }}"><i class="fa fa-facebook-square"></i> facebook</a></li> -->
       <li> <a href="{{ site.github }}"><i class="fa fa-github-square"></i> github</a> </li>
     </div>
   </ul>
