--- a/css/hc.css
+++ b/css/hc.css
@@ -575,22 +575,22 @@ time
   text-shadow:1px 1px #fff
 }
 
-.game
+.fashion
 {
   border-left:solid 2px #bc0005
 }
 
-.game-button
+.fashion-button
 {
   background-color:#bc0005
 }
 
-.game:hover
+.fashion:hover
 {
   border-left:solid 2px #f40006
 }
 
-.game-button:hover
+.fashion-button:hover
 {
   background-color:#f40006
 }
