--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <footer>
     <p class="text-muted credit">
       &copy; {{ site.time | date: '%Y' }} {{ site.name }} &middot;
-      <a href="https://github.com/arnp/herring-cove"> Herring Cove for Jekyll </a>
+      <a href="hhttp://github.com/yzk114360"> MMO.GitHub </a>
       {{ site.time }}
     </p>
   </footer>
