--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -13,8 +13,8 @@
       <ul class="nav navbar-nav">
       <li><a href="{{ site.baseurl }}/article.html">文章</a></li>
       <li><a href="{{ site.baseurl }}/links.html">趣物</a></li>
-      <li><a href="{{ site.baseurl }}/projects.html">Projects</a></li>
-      <li><a href="{{ site.baseurl }}/about.html">About</a></li>
+      <li><a href="{{ site.baseurl }}/projects.html">项目</a></li>
+      <li><a href="{{ site.baseurl }}/about.html">杨毛出自杨身上</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
@@ -27,8 +27,8 @@
     <hr />
     <li><a href="{{ site.baseurl }}/list.html">文章</a></li>
     <li><a href="{{ site.baseurl }}/links.html">趣物</a></li>
-    <li><a href="{{ site.baseurl }}/projects.html">Projects</a></li>
-    <li><a href="{{ site.baseurl }}/about.html">About</a></li>
+    <li><a href="{{ site.baseurl }}/projects.html">项目</a></li>
+    <li><a href="{{ site.baseurl }}/about.html">杨毛出自杨身上</a></li>
     <hr />
     <div id="social-wrapper">
 <!--       <li> <a href="{{ site.twitter }}"><i class="fa fa-twitter-square"></i> @twitter</a></li>
