--- a/css/hc.css
+++ b/css/hc.css
@@ -563,8 +563,8 @@ time
 
 .card
 {
-  margin-left:-40px;
-  margin-top:-10px;
+  /*margin-left:-40px;*/
+  /*margin-top:-10px;*/
   border-radius: 50%;
 }
 
