--- a/css/hc.css
+++ b/css/hc.css
@@ -563,8 +563,12 @@ time
 
 .card
 {
-  /*margin-left:-40px;*/
-  /*margin-top:-10px;*/
+  margin-left: 50%;
+  margin-right: 50%;
+}
+
+.card img
+{
   border-radius: 50%;
 }
 
