--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,8 @@
   <footer>
     <p class="text-muted credit">
       &copy; {{ site.time | date: '%Y' }} {{ site.name }} &middot;
-      <a href="hhttp://github.com/yzk114360"> MMO.GitHub </a>
-      {{ site.time }}
+      <a href="hhttp://github.com/yzk114360"> MMO.GitHub</a>
+      &nbsp; {{ site.time }}
     </p>
   </footer>
 </div>
