--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -12,8 +12,8 @@
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
       <li><a href="{{ site.baseurl }}/article.html">文章</a></li>
-      <li><a href="{{ site.baseurl }}/links.html">趣物</a></li>
-      <li><a href="{{ site.baseurl }}/projects.html">项目</a></li>
+      <li><a href="{{ site.baseurl }}/new.html">趣物</a></li>
+      <!-- <li><a href="{{ site.baseurl }}/projects.html">项目</a></li> -->
       <li><a href="{{ site.baseurl }}/about.html">杨毛出自杨身上</a></li>
       </ul>
     </div><!--/.nav-collapse -->
@@ -25,9 +25,9 @@
   <ul class="sidebar-nav">
     <li class="sidebar-brand"><a href="{{ site.baseurl }}/"><h1 class="brand">{{ site.name }}</h1></a><h3>{{ site.description }}</h3></li>
     <hr />
-    <li><a href="{{ site.baseurl }}/list.html">文章</a></li>
-    <li><a href="{{ site.baseurl }}/links.html">趣物</a></li>
-    <li><a href="{{ site.baseurl }}/projects.html">项目</a></li>
+    <li><a href="{{ site.baseurl }}/article.html">文章</a></li>
+    <li><a href="{{ site.baseurl }}/new.html">趣物</a></li>
+    <!-- <li><a href="{{ site.baseurl }}/projects.html">项目</a></li> -->
     <li><a href="{{ site.baseurl }}/about.html">杨毛出自杨身上</a></li>
     <hr />
     <div id="social-wrapper">
