--- a/_includes/greeting.html
+++ b/_includes/greeting.html
@@ -1,8 +1,8 @@
   </div>
   <div class="container">
     <div id="welcome-greeting">
-      <h1>Land Ahoy!</h1>
-      <h2>This is <a href="https://github.com/arnp/herring-cove">Herring Cove</a>, a minimal theme built for <a href="http://jekyllrb.com"> Jekyll</a>. It features a number distinctive features such as a fixed sidebar and a showcase image. It's also easily configurable and editable to your liking. <br><br> On this test site, you will find some blog posts, interesting links, and more. You'll also find a number of ways to get in touch.</h2>
+      <h1>主页标题文</h1>
+      <h2>文章<a href="#">样式</a></h2>
       <hr />
     </div>
   </div>
