--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,12 @@
 ---
 ---
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     {% include header.html %}
   </head>
   <body>
-    <div class="nav-toggle"><i class="fa fa-bars fa-2x"></i> Herring Cove </div>
+    <div class="nav-toggle"><i class="fa fa-bars fa-2x"></i> MMO </div>
     <div id = "wrapper">
       {%include navigation.html %}
       <div class="container">
