--- a/css/hc.css
+++ b/css/hc.css
@@ -49,7 +49,7 @@ p
   list-style:none;
   font-weight:lighter;
   line-height:250%;
-  padding-bottom:30px
+  padding-bottom:30px;
   margin-left: -40px;
 }
 
