--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -3,10 +3,10 @@
     .showcase-wrapper {background-image: url("{{ site.baseurl }}/images/showcase.jpg");}
     </style>
     <div class="showcase-wrapper sticky">
-      <div class="showcase-text">
+<!--       <div class="showcase-text">
           {% for post in site.posts limit: 1 %}
           <span class="badge lazy"><smaller>最新文章</smaller></span><br>{{ post.title }}<br><a href="{{ site.baseurl }}{{ post.url }}"><button type="button" class="btn btn-default showcase-button">查看</button></a>
           {% endfor %}
-      </div>
+      </div> -->
     </div>
     <div class="container">
