--- a/css/hc.css
+++ b/css/hc.css
@@ -262,14 +262,10 @@ pre
 .showcase-wrapper
 {
   width:100%;
-  height:80vh;
-  min-height:500px;
+  min-height:400px;
   margin-top:-50px;
-  box-shadow:inset 0 -10px 5px -2px rgba(119,119,119,0.35);
-  -moz-box-shadow:inset 0 -10px 5px -2px rgba(119,119,119,0.35);
-  -webkit-box-shadow:inset 0 -10px 5px -2px rgba(119,119,119,0.35);
   border-bottom:solid 1px #fff;
-  background-size: cover;
+  background-position: center;
   z-index:-4
 }
 
