--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -2,7 +2,6 @@
     <style>
     /*.showcase-wrapper {background-image: url("{{ site.baseurl }}/images/showcase.jpg");}*/
     .showcase-wrapper {background-color: #1d1d1d;}
-    .showcase-wrapper span{line-height: 100%;text-align: center;}
     </style>
     <div class="showcase-wrapper sticky">
 <!--       <div class="showcase-text">
@@ -10,6 +9,6 @@
           <span class="badge lazy"><smaller>最新文章</smaller></span><br>{{ post.title }}<br><a href="{{ site.baseurl }}{{ post.url }}"><button type="button" class="btn btn-default showcase-button">查看</button></a>
           {% endfor %}
       </div> -->
-      <span>Hello Word</span>
+      <span>{{ site.bannerText }}</span>
     </div>
     <div class="container">
