--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,8 @@
   <footer>
     <p class="text-muted credit">
       &copy; {{ site.time | date: '%Y' }} {{ site.name }} &middot;
-      <a href="hhttp://github.com/yzk114360"> MMO.GitHub</a>
+      <!-- <a href="http://github.com/yzk114360"> MMO.GitHub</a> -->
+      <a href="www.miitbeian.gov.cn"> 粤ICP备17077157号</a>
       &nbsp; {{ site.time }}
     </p>
   </footer>
