--- a/_includes/greeting.html
+++ b/_includes/greeting.html
@@ -1,8 +1,8 @@
   </div>
   <div class="container">
     <div id="welcome-greeting">
-      <h1>无fa可说</h1>
-      <h2>整顿中<a href="#">...</a></h2>
+      <h1>暂无动态</h1>
+      <h2>_(:з」∠)_<a href="#">...</a></h2>
       <hr />
     </div>
   </div>
