--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <p class="text-muted credit">
       &copy; {{ site.time | date: '%Y' }} {{ site.name }} &middot;
       <!-- <a href="http://github.com/yzk114360"> MMO.GitHub</a> -->
-      <a href="www.miitbeian.gov.cn"> 粤ICP备17077157号</a>
+      <a href="http://www.miitbeian.gov.cn" target="_blank"> 粤ICP备17077157号</a>
       &nbsp; {{ site.time }}
     </p>
   </footer>
